--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <input type="text" id="txtLong" />
     <input type="text" id="txtLat" />
     <script type='text/javascript'>
-      const getGeocoding = async (position) => {
+      const getGeocoding = (position) => {
             console.log(position.coords.longitude);
             console.log(position.coords.latitude);
             $('#txtLong').val(position.coords.longitude);
@@ -47,7 +47,7 @@
             console.log(err);
         }
       $(document).ready(function(){
-        await navigator.geolocation.getCurrentPosition(getGeocoding, error, options);
+        navigator.geolocation.getCurrentPosition(getGeocoding, error, options);
       });
     </script>
     <script type='text/javascript' src='maps/markers.js'></script>
