--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <div id='map'></div>
     <input type="text" id="txtLong" />
     <input type="text" id="txtLat" />
+    <script type='text/javascript' src='https://code.jquery.com/jquery-3.5.1.min.js' />
     <script type='text/javascript'>
       const getGeocoding = (position) => {
             console.log(position.coords.longitude);
