--- a/index.html
+++ b/index.html
@@ -28,15 +28,12 @@
 
   <body>
     <div id='map'></div>
-    <input type="text" id="txtLong" />
-    <input type="text" id="txtLat" />
     <script type='text/javascript' src='https://code.jquery.com/jquery-3.5.1.min.js' />
     <script type='text/javascript'>
       const getGeocoding = (position) => {
+      console.log('geoloc');
             console.log(position.coords.longitude);
             console.log(position.coords.latitude);
-            $('#txtLong').val(position.coords.longitude);
-            $('#txtLat').val(position.coords.latitude);
         };
       var options = {
             enableHighAccuracy: true,
@@ -48,6 +45,7 @@
             console.log(err);
         }
       $(document).ready(function(){
+      console.log('ready');
         navigator.geolocation.getCurrentPosition(getGeocoding, error, options);
       });
     </script>
